# Eastwood

./: .gitignore  CMakeLists.txt  DoubleRatchet.cpp  DoubleRatchet.h  README.md  main.cpp  test_double_ratchet  testingx3dh.cpp  x3dh.h
.github/workflows/: clang-tidy.yml  integration-test.yml  test.yml
cryptography/: CommunicationSession.cpp  CommunicationSession.h  DoubleRatchet.cpp  DoubleRatchet.h  x3dh.cpp  x3dh.h
include/: BaseClient.h  HTTPSClient.h
src/: .env  BaseClient.cpp  HTTPSClient.cpp  main.cpp
src/algorithms/: algorithms.cpp  algorithms.h  constants.h
src/api_interactions/: MakeAuthReq.cpp
src/auth/: logout.h  set_up_client.cpp
src/auth/login/: login.h  (+1 more)
src/client_api_interactions/: MakeAuthReq.cpp  MakeAuthReq.h  MakeUnathReq.cpp  MakeUnauthReq.cpp  MakeUnauthReq.h
src/communication/: ReceiveFlow.h
src/database/: database.cpp  database.h  database_manager.cpp  database_manager.h  schema.h
src/endpoints/: endpoints.cpp  endpoints.h
src/files/: upload_file.cpp  upload_file.h
src/key_exchange/: DeviceCommunicationSession.cpp  DeviceCommunicationSession.h  DontMergeThis.cpp  DontMergeThis.h  DoubleRatchet.cpp  DoubleRatchet.h  IdentityCommunicationSession.cpp  IdentityCommunicationSession.h  MessageStructs.h  NewRatchet.cpp  NewRatchet.h  XChaCha20-Poly1305.cpp  XChaCha20-Poly1305.h  key_exchange.cpp  utils.cpp  utils.h  warning_example.h  x3dh.cpp  x3dh.h
src/keys/: KEKManager.cpp  KEKManager.h  SecureMemoryBuffer.cpp  kek_manager.cpp  kek_manager.h  secure_memory_buffer.cpp  secure_memory_buffer.h  session_token_manager.cpp  session_token_manager.h
src/libraries/: BaseClient.cpp  HTTPSClient.cpp
src/session/: DeviceCommunicationSession.cpp  DeviceCommunicationSession.h  IdentityCommunicationSession.h
src/sessions/: DeviceCommunicationSession.cpp  DeviceCommunicationSession.h  IdentityCommunicationSession.cpp  IdentityCommunicationSession.h  IdentityManager.cpp  IdentityManager.h  IdentitySession.cpp  IdentitySession.h  KeyBundle.h  RatchetSessionManager.cpp  RatchetSessionManager.h  SessionManager.cpp  SessionManager.h
src/sql/: queries.cpp  queries.h
src/structs/: KeyBundle.h
src/ui/: QRCodeGenerator.cpp  QRCodeGenerator.h  resources.qrc  resources_rc.py
src/utils/: Cache.h  ConversionUtils.cpp  ConversionUtils.h  JsonParser.cpp  JsonParser.h  url_utils.h
test/: device_communication_session_serialization_test.cpp  double_ratchet_test.cpp  identity_communication_session_test.cpp  identity_session_message_test.cpp  identity_session_test.cpp  integration_main_flow_test.cpp  test.cpp  unit_tests.cpp
(+64 files in other folders)
